# youbot_kinect_registration

./: CMakeLists.txt  README  package.xml
src/: pattern_detection_test.cpp  registration.cpp  youbot_kinect_registration.cpp
